register student flow
